--- a/index.html
+++ b/index.html
@@ -167,13 +167,16 @@
                 </div>
                 <div class="sct3-box sixth">
                     <div class="box-title">
+                        <div class="black-logo">
+                            <img src="img/black-logo.svg" alt="">
+                        </div>
                         <h1>WATCH</h1>
                     </div>
-                    <span class="orange">ULTRA 2</span>
-                    <p>New finish. Never quit.</p>
+                    <p class="card-cash">Get up to 3% Daily Cash back <br>
+                        with every purchase</p>
                     <div class="box-buttons">
                         <button class="more">Learn more</button>
-                        <button class="buy">Buy</button>
+                        <button class="buy">Apply now</button>
                     </div>
                     <div class="box-img">
                         <img src="img/Card 1.png" alt="">
