--- a/index.html
+++ b/index.html
@@ -202,15 +202,154 @@
 
         <section class="section7">
             <div class="container">
-
+                <p>1. Apple Intelligence will be available in beta on all iPhone 16 models, iPhone 15 Pro, iPhone 15 Pro Max, and iPad and Mac with M1 and later, with Siri and device language set to U.S. English, as part of an iOS 18, iPadOS 18, and macOS Sequoia update this fall. English (Australia, Canada, New Zealand, South Africa, UK) language support available this December. Some features and support for additional languages, like Chinese, English (India, Singapore), French, German, Italian, Japanese, Korean, Portuguese, Spanish, Vietnamese, and others, will be coming over the course of the next year.</p>
+                <p>2. Apple Intelligence will be available in beta on all iPhone 16 models, iPhone 15 Pro, iPhone 15 Pro Max, and iPad and Mac with M1 and later, with Siri and device language set to U.S. English, as part of an iOS 18, iPadOS 18, and macOS Sequoia update this fall. English (Australia, Canada, New Zealand, South Africa, UK) language support available this December. Some features and support for additional languages, like Chinese, English (India, Singapore), French, German, Italian, Japanese, Korean, Portuguese, Spanish, Vietnamese, and others, will be coming over the course of the next year.</p>
+                <p> 3. Available in two models: AirPods 4 and AirPods 4 with Active Noise Cancellation.</p>
+                <p>4. Hearing Test and Hearing Aid features expected fall 2024. They will be supported on AirPods Pro 2 with the latest firmware paired with a compatible iPhone or iPad with iOS 18 or iPadOS 18 and later, and are intended for people 18 years old or older. The Hearing Aid feature will be intended for people with perceived mild to moderate hearing loss and is pending FDA review.</p>
+                <p>5. Trade-in values will vary based on the condition, year, and configuration of your eligible trade-in device. Not all devices are eligible for credit. You must be at least 18 years old to be eligible to trade in for credit or for an Apple Gift Card. Trade-in value may be applied toward qualifying new device purchase, or added to an Apple Gift Card. Actual value awarded is based on receipt of a qualifying device matching the description provided when estimate was made. Sales tax may be assessed on full value of a new device purchase. In-store trade-in requires presentation of a valid photo ID (local law may require saving this information). Offer may not be available in all stores, and may vary between in-store and online trade-in. Some stores may have additional requirements. Apple or its trade-in partners reserve the right to refuse or limit quantity of any trade-in transaction for any reason. More details are available from Apple’s trade-in partner for trade-in and recycling of eligible devices. Restrictions and limitations may apply.</p>
+                <p>To access and use all Apple Card features and products available only to Apple Card users, you must add Apple Card to Wallet on an iPhone or iPad that supports and has the latest version of iOS or iPadOS. Apple Card is subject to credit approval, available only for qualifying applicants in the United States, and issued by Goldman Sachs Bank USA, Salt Lake City Branch.</p>
+                <p>If you reside in the U.S. territories, please call Goldman Sachs at 877-255-5923 with questions about Apple Card.</p>
+                <p>Learn more about how Apple Card applications are evaluated at support.apple.com/kb/HT209218.</p>
+                <p>A subscription is required for Apple TV+.</p>
+                <p>A subscription is required for Apple Arcade, Apple Fitness+, and Apple Music.</p>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-
+            <div class="foot-main">
+                <div class="footer-links">
+                    <div class="col">
+                        <div class="shop">
+                            <p class="black">Shop and Learn</p>
+                            <p class="grey">Store</p>
+                            <p class="grey">Mac</p>
+                            <p class="grey">iPad</p>
+                            <p class="grey">iPhone</p>
+                            <p class="grey">Watch</p>
+                            <p class="grey">Vision</p>
+                            <p class="grey">AirPods</p>
+                            <p class="grey">TV & Home</p>
+                            <p class="grey">Air Tag</p>
+                            <p class="grey">Accessories</p>
+                            <p class="grey">Gift Cards</p>
+                        </div>
+                        <div class="wallet">
+                            <p class="black">Apple Wallet</p>
+                            <p class="grey">Wallet</p>
+                            <p class="grey">Apple Card</p>
+                            <p class="grey">Apple Pay</p>
+                            <p class="grey">Apple Cash</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="account">
+                            <p class="black">Account</p>
+                            <p class="grey">Manage Your Apple ID</p>
+                            <p class="grey">Apple Store Account</p>
+                            <p class="grey">iCloud.com</p>
+                        </div>
+                        <div class="entertainment">
+                            <p class="black">Entertainment</p>
+                            <p class="grey">Apple One</p>
+                            <p class="grey">Apple TV+</p>
+                            <p class="grey">Apple Music</p>
+                            <p class="grey">Apple Arcade</p>
+                            <p class="grey">Apple Fitness+</p>
+                            <p class="grey">Apple News+</p>
+                            <p class="grey">Apple Podcasts</p>
+                            <p class="grey">Apple Books</p>
+                            <p class="grey">App Store</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="store">
+                            <p class="black">Apple Store</p>
+                            <p class="grey">Find a Store</p>
+                            <p class="grey">Genius Bar</p>
+                            <p class="grey">Today at Apple</p>
+                            <p class="grey">Group Reservation</p>
+                            <p class="grey">Apple Camp</p>
+                            <p class="grey">Apple Store App</p>
+                            <p class="grey">Certified Refurbish</p>
+                            <p class="grey">Apple Trade In</p>
+                            <p class="grey">Financing</p>
+                            <p class="grey">Carrier Deals at Apple</p>
+                            <p class="grey">Oder Status</p>
+                            <p class="grey">Shopping Help</p>
+                        </div>
+                    </div>    
+                        <div class="col">
+                            <div class="buisness">
+                                <p class="black">For Business</p>
+                                <p class="grey">Apple and Bussiness</p>
+                                <p class="grey">Shop for Business</p>
+                            </div>
+                            <div class="education">
+                                <p class="black">For Education</p>
+                                <p class="grey">Apple and Education</p>
+                                <p class="grey">Shop for K-12</p>
+                                <p class="grey">Shop for Colege</p>
+                            </div>
+                            <div class="health">
+                                <p class="black">For Healthcare</p>
+                                <p class="grey">Apple in Healthcare</p>
+                                <p class="grey">Mac in Healthcare</p>
+                                <p class="grey">Health on Apple Watch</p>
+                                <p class="grey">Health Records on iPhone and
+                                    iPad</p>
+                            </div>
+                            <div class="government">
+                                <p class="black">For Government</p>
+                                <p class="grey">Shop for Government</p>
+                                <p class="grey">Shop for Veterans</p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="values">
+                                <p class="black">Apple Values</p>
+                                <p class="grey">Accessibility</p>
+                                <p class="grey">Education</p>
+                                <p class="grey">Environment</p>
+                                <p class="grey">Inclusion and Diversity</p>
+                                <p class="grey">Privacy</p>
+                                <p class="grey">Racial Equity and Justice</p>
+                                <p class="grey">Supply Chain</p>
+                            </div>
+                            <div class="about-apple">
+                                <p class="black">About Apple</p>
+                                <p class="grey">Newsroom</p>
+                                <p class="grey">Apple Leadership</p>
+                                <p class="grey">Career Opportunities</p>
+                                <p class="grey">Investors</p>
+                                <p class="grey">Ethics & Compliance</p>
+                                <p class="grey">Events</p>
+                                <p class="grey">Contact Apple</p>
+                            </div>
+                        </div>
+                    
+                </div>
+                <p class="ways">More ways to shop: Find an Apple Store or other retailer near you. Or call 1-800-MY-APPLE.</p>
+            </div>
+            <div class="footer-foot">
+                <div class="copy">
+                    <p>Copyright © 2024 Apple Inc. All rights reserved.</p>
+                    <p>|</p>
+                    <p>Privacy Policy</p>
+                    <p>|</p>
+                    <p>Terms of Use</p>
+                    <p>|</p>
+                    <p>Sales and Refunds</p>
+                    <p>|</p>
+                    <p>Legal Site Map</p>
+                </div>
+                <div class="country">
+                    <p>Unites States</p>
+                </div>
+            </div>
         </div>
+
     </footer>
 
 </body>
